--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -45,6 +45,8 @@
 
 .gridAlign{
     align-items: center;
+    height: inherit;
+    cursor: pointer;
 }
 
 .logo{
@@ -79,3 +81,65 @@
     padding: .5rem 1rem .5rem 1rem;
     border-radius: 6px;
 }
+
+.mouseOverContGridIcon{
+    display: grid;
+    position: absolute;
+    max-width: 800px;
+    top: 5rem;
+    padding: 2rem 8rem 2rem 2rem;
+    background: var(--primary-color);
+    grid-template-columns: auto auto;
+    gap: 2rem 6rem;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+.mouseOverContBuyCrypto{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    position: absolute;
+    max-width: 800px;
+    top: 5rem;
+    padding: 2rem 8rem 2rem 2rem;
+    background: var(--primary-color);
+    gap: 2rem 6rem;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+
+.TextOverDiv{
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.overPara{
+    font-size: .9rem;
+    font-weight: regular;
+}
+
+.overHead{
+    font-weight: bold;
+}
+
+.mouseOverElement {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+
+.itemIcon{
+    background: #D9D9D9;
+    height: 2rem;
+    min-width: 2rem;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: green;
+}
+
