--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -107,6 +107,19 @@
     border-radius: 10px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
+.mouseOverContTrade{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    position: absolute;
+    max-width: 800px;
+    top: 5rem;
+    padding: 2rem 8rem 2rem 2rem;
+    background: var(--primary-color);
+    gap: 2rem 6rem;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
 
 
 .TextOverDiv{
