--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -73,6 +73,11 @@
     color: #363636;
     padding: .5rem 1rem .5rem 1rem;
     border-radius: 6px;
+    cursor: pointer;
+}
+.logInButton:hover{
+   background-color: #ECECEC;
+   color: #7D7D7D;
 }
 
 .signUpButton{
@@ -80,6 +85,36 @@
     color: white;
     padding: .5rem 1rem .5rem 1rem;
     border-radius: 6px;
+    cursor: pointer;
+}
+
+.signUpButton:hover{
+  background-color:#EAD983;
+  color: 
+}
+
+.downloadIcon{
+    cursor: pointer;
+}
+
+.downloadIcon:hover{
+  color: rgba(138, 117, 8, 1);
+}
+
+.globeIcon{
+    cursor: pointer
+}
+
+.globeIcon:hover{
+  color: rgba(138, 117, 8, 1);
+}
+
+.USD{
+    cursor: pointer;
+}
+
+.USD:hover{
+   color: rgba(138, 117, 8, 1);
 }
 
 .mouseOverContGridIcon{
@@ -94,27 +129,14 @@
     border-radius: 10px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
-.mouseOverContBuyCrypto{
+.mouseOverContTable{
     display: flex;
     flex-direction: column;
     gap: 2rem;
     position: absolute;
-    max-width: 800px;
+    max-width: 400px;
     top: 5rem;
-    padding: 2rem 8rem 2rem 2rem;
-    background: var(--primary-color);
-    gap: 2rem 6rem;
-    border-radius: 10px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-}
-.mouseOverContTrade{
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    position: absolute;
-    max-width: 800px;
-    top: 5rem;
-    padding: 2rem 8rem 2rem 2rem;
+    padding: 2rem 2rem 2rem 2rem;
     background: var(--primary-color);
     gap: 2rem 6rem;
     border-radius: 10px;
