--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -6,6 +6,22 @@
     display: grid;
     grid-template-columns: auto auto auto auto auto;
 }
+.lowerDiv{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.linksCont{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
 
 .header{
     font-size: large;
@@ -20,4 +36,12 @@
     flex-direction: column;
     gap: 1rem;
     padding-top: 2rem;
+}
+
+.linkIcons{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 2rem;
+    padding-top: 2rem;
+    font-size: 1.3rem;
 }
